--- a/VB sample/VB sample.vbproj
+++ b/VB sample/VB sample.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AF390D38-30A9-4275-8F6B-89E35FFA1AB2}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>VB_sample.Module1.Example</StartupObject>
+    <StartupObject>Sub Main</StartupObject>
     <RootNamespace>VB_sample</RootNamespace>
     <AssemblyName>VB sample</AssemblyName>
     <FileAlignment>512</FileAlignment>
